update screenshot and readme

--- a/README.mkd
+++ b/README.mkd
@@ -29,21 +29,25 @@ like your improvements integrated upstream.
 
 Getting Started
 ---------------
-A simple installer is now available.  If you would prefer to do it the
-hard way:
+A simple installer is now available - just click Download on the GitHub
+page to access it. If you would prefer to do it the hard way, see below.
+
+No matter how you install, the results are the same. SketchUp should
+have an Export to OpenSceneGraph menu under File next time you start it.
+
+![Export menu items](https://github.com/rpavlik/sketchupToOSG/raw/master/sketchup-to-osg.jpg)
+
+We have only used this with the free version of Google SketchUp 8 on Windows -
+compatibility with other versions is unknown.
+
+Manual Installation
+-------------------
 
 Unzip this somewhere, and drop the osgconv folder and the
 "openscenegraph_exportviacollada.rb" file into your Google Sketchup
 Plugins folder, something like:
 
 > C:\Program Files (x86)\Google\Google SketchUp 8\Plugins
-
-No matter how you install, the results are the same. SketchUp should
-have an Export to OpenSceneGraph menu under File next time you start it.
-(see the screenshot named `sketchup-to-osg.jpg`)
-
-We have only used this with the free version of Google SketchUp 8 on Windows -
-compatibility with other versions is unknown.
 
 Licenses
 --------
