--- a/CHANGELOG.mkd
+++ b/CHANGELOG.mkd
@@ -18,6 +18,17 @@ Not yet tagged, but will include these changes:
 * Scaling option clarified, and choice of inches, feet, and meters now 
 	offered.
 
+* Menu items renamed, selection items will disable themselves when there
+	is no current selection.
+
+* "About" menu item added to visit homepage.
+
+* Call the helper apps directly, rather than through a batch file.
+
+* Ensure we can actually find the helper apps before calling them.
+
+* Comment the code better.
+
 Version 1.3.1
 -------------
 Tagged 12 May 2011.
@@ -27,7 +38,7 @@ Tagged 12 May 2011.
 * Plugin will automatically add file extension if no extension found.
 
 * Update to pre-release of OSG 2.8.5 (including Windows binaries) to use 
-upstreamed versions of patches developed for earlier plugin versions.
+	upstreamed versions of patches developed for earlier plugin versions.
 
 Version 1.3
 -----------
