--- a/CHANGELOG.mkd
+++ b/CHANGELOG.mkd
@@ -6,7 +6,7 @@ abbreviated history for "normal" users.
 
 Version 1.4
 -----------
-Not yet tagged, but will include these changes:
+Tagged 26 May 2011.
 
 * Newer pre-release of OSG 2.8.5. 
 
