--- a/README.mkd
+++ b/README.mkd
@@ -30,7 +30,8 @@ like your improvements integrated upstream.
 Getting Started
 ---------------
 A simple installer is now available - just click Download on the GitHub
-page to access it. If you would prefer to do it the hard way, see below.
+page to access it. If you would prefer to do it the hard way, see
+"Manual Installation," below.
 
 No matter how you install, the results are the same. SketchUp should
 have an Export to OpenSceneGraph menu under File next time you start it.
