fix capitalization of SketchUp

--- a/README.mkd
+++ b/README.mkd
@@ -62,7 +62,7 @@ something like:
 Manual Installation
 -------------------
 Unzip this somewhere, and drop the `osgconv` folder and the
-`openscenegraph_exportviacollada.rb` file into your Google Sketchup
+`openscenegraph_exportviacollada.rb` file into your Google SketchUp
 Plugins folder, something like:
 
 > C:\Program Files (x86)\Google\Google SketchUp 8\Plugins
