--- a/README.mkd
+++ b/README.mkd
@@ -15,14 +15,15 @@ Original Author:
 
 Introduction
 ------------
-Google SketchUp is a pretty slick application, and OpenSceneGraph (OSG) is a
-great 3D rendering system. SketchUp can export its models to COLLADA (`.dae`),
-and OpenSceneGraph conveniently has a plugin to load COLLADA models, though
-it (and/or its dependencies) can be tough to build. You could create native
-`.osg`/`.ive` models by exporting to COLLADA, then using `osgconv` to convert
-them. Since SketchUp has support for plugins written in Ruby, why not combine
-the steps and make a plugin that bundles a COLLADA-capable OSG build and
-can set up the COLLADA export and conversion processes for the best results?
+[Google SketchUp][1] is a pretty slick application, and [OpenSceneGraph
+(OSG)][2] is a great 3D rendering system. SketchUp can export its models
+to [COLLADA (`.dae`)][3], and OpenSceneGraph conveniently has a plugin
+to load COLLADA models, though it (and/or its dependencies) can be tough
+to build. You could create native `.osg`/`.ive` models by exporting to
+COLLADA, then using `osgconv` to convert them. Since SketchUp has
+support for plugins written in Ruby, why not combine the steps and make
+a plugin that bundles a COLLADA-capable OSG build and can set up the
+COLLADA export and conversion processes for the best results?
 
 Well, that's what this is - a plugin for combining those steps. It's been
 useful to us - hopefully it's useful to you as well!
@@ -33,9 +34,9 @@ like your improvements integrated upstream.
 
 Getting Started
 ---------------
-A simple installer is now available - just click Download on the GitHub
-page to access it. If you would prefer to do it the hard way, see
-"Manual Installation," below.
+A simple installer is now available - just [download it from
+GitHub](https://github.com/rpavlik/sketchupToOSG/downloads). If you
+would prefer to do it the hard way, see "Manual Installation," below.
 
 No matter how you install, the results are the same. SketchUp should
 have an Export to OpenSceneGraph menu under File next time you start it.
@@ -84,7 +85,7 @@ the following license:
 A local copy of `fileutils.rb` from the upstream Ruby project is bundled.
 
 An actual in-use instance of this plugin makes use of the OpenSceneGraph
-package and its dependencies, including but not limited to COLLADA-DOM,
+package and its dependencies, including but not limited to [COLLADA-DOM][4],
 which have their own licenses.
 
 Acknowledgement
@@ -108,5 +109,10 @@ Paper materials and copies of publications may be mailed to:
 > USA
 
 Of course, this plugin would not be possible without the work of the
-OpenSceneGraph and COLLADA-DOM teams. Thanks to them and the others in
-the open-source ecosystem supporting them.
+[OpenSceneGraph][2] and [COLLADA-DOM][4] teams. Thanks to them and the
+others in the open-source ecosystem supporting them.
+
+[1]: http://sketchup.google.com/ "Google SketchUp"
+[2]: http://www.openscenegraph.org/ "OpenSceneGraph"
+[3]: https://collada.org/ "COLLADA"
+[4]: http://www.collada.org/mediawiki/index.php/Portal:COLLADA_DOM "COLLADA-DOM"
