--- a/CHANGELOG.mkd
+++ b/CHANGELOG.mkd
@@ -4,6 +4,13 @@ SketchUp to OSG Plugin CHANGELOG
 As always, for the full history, look at the Git commit log. This is an 
 abbreviated history for "normal" users. 
 
+Version 1.5.1
+-----------
+Tagged 16 September 2011.
+
+* Brown-paper bag release: typo meant that "GoogleMode" (alternative
+	transparency mode) didn't work in 1.5.
+
 Version 1.5
 -----------
 Tagged 6 September 2011.
